testdata/fixtures/custom-rules/error/go.mod
module customrules/error

go 1.22
